@@ -2,6 +2,7 @@
 
 	* Refactored BE module, compatible with TYPO3 CMS 7, removed ExtJS, resolves #59441
 	* Moved languages files to XLIFF, resolves #76251
+	* Removed deprecated properties, resolves #76252
 
 2016-05-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
